# DBSight

./: Cargo.toml  Makefile  README.md
app/: Cargo.toml
app/src/: main.rs
app/src/core/: mod.rs
app/src/core/i18n/: en.toml  mod.rs  zh-cn.toml
app/src/ui/: mod.rs  state.rs
app/src/ui/components/: connection_tabs.rs  create_connection_dialog.rs  layout.rs  list_database.rs  list_tables.rs  loading.rs  mod.rs  sidebar.rs  topbar.rs
app/src/ui/components/dialog/: create_connection_dialog.rs  create_mysql_connection_dialog.rs  import_url_dialog.rs  mod.rs
app/src/ui/pages/: mod.rs
app/src/ui/pages/tables/: mod.rs  table.rs  table_delegate.rs
app/src/ui/windows/: assets.rs  icons.rs  layout.rs  mod.rs  root.rs  themes.rs  window_option.rs
assets/: Cargo.toml
assets/src/: icons.rs  lib.rs
core/: Cargo.toml
core/src/: db_config.rs  db_manager.rs  events.rs  lib.rs
core/src/database/: mod.rs
core/src/driver/: mod.rs  mysql.rs
core/src/model/: mod.rs  schema.rs  table.rs
docs/: README_cn.md
