[workspace]
members = ["app/", "core/", "assets/"]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0.17"
anyhow = "1.0"
serde = "1.0"
# GPUI
gpui = "0.2.2"
gpui-component = "0.4.0"
# Tokio
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
# Uuid
uuid = { version = "1.18.1", features = ["v4", "serde"] }
# Keyring
keyring = "2"
# Workspace Crates
db-sight-assets = { path = "./assets" }
db-sight-core = { path = "./core" }
