[package]
name = "DBSight"
version = "0.1.0"
authors = ["MuzzyLip <muzzylip@gmail.com>"]
edition = "2021"

[dependencies]
# GPUI
gpui = "0.2.2"
gpui-component = "0.4.0"
# Common Crates
anyhow = { workspace = true }
# GPUI Import Assets
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
# Serialize/Deserialize
serde = { workspace = true }
# Locale
locale_config = "0.3"
toml = "0.9.8"
