[package]
name = "db-sight"
version = "0.1.0"
authors = ["MuzzyLip <muzzylip@gmail.com>"]
edition = "2021"

[dependencies]
# GPUI
gpui = { workspace = true }
gpui-component = { workspace = true }
# Common Crates
anyhow = { workspace = true }
# GPUI Import Assets
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
# Serialize/Deserialize
serde = { workspace = true }
# Locale
locale_config = "0.3"
toml = "0.9.8"
# Local Crate
db-sight-assets = { workspace = true }
db-sight-core = { workspace = true }
