[package]
name = "db-sight-core"
version = "0.1.0"
authors = ["MuzzyLip <muzzylip@gmail.com>"]
edition = "2021"

[dependencies]
uuid = { workspace = true }
# async_trait
async-trait = "0.1.89"
# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }
# Tokio
tokio = { workspace = true }
# DB Connections
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "mysql",
    "chrono",
    "uuid",
    "json",
] }
# Date/Time handling
chrono = "0.4"
# Connection Storage
dirs = "5.0"
keyring = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# GPUI
gpui = { workspace = true }
# Local Crate
db-sight-assets = { workspace = true }
